--- a/proxy-module/pom.xml
+++ b/proxy-module/pom.xml
@@ -8,8 +8,37 @@
     <artifactId>proxy-module</artifactId>
     <version>1.0</version>
     <properties>
-        <java.version>1.9</java.version>
+        <java.version>1.8</java.version>
     </properties>
+    <dependencies>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.8</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!--Gson-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.21</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
+
+    </dependencies>
     <build>
         <plugins>
             <plugin>
