Refactor config format

--- a/config.json
+++ b/config.json
@@ -5,46 +5,14 @@
       "ip": "127.0.0.1",
       "bindPort": 1111,
       "master": true,
-      "slaves": [
-        {
-          "name": "n3",
-          "ip": "127.0.0.1",
-          "bindPort": 1113,
-          "master": false
-        },
-        {
-          "name": "n4",
-          "ip": "127.0.0.1",
-          "bindPort": 1114,
-          "master": false
-        },
-        {
-          "name": "n5",
-          "ip": "127.0.0.1",
-          "bindPort": 1115,
-          "master": false
-        }
-      ]
+      "slaves": ["n3", "n4", "n5"]
     },
     {
       "name": "n2",
       "ip": "127.0.0.1",
       "bindPort": 1112,
       "master": true,
-      "slaves": [
-        {
-          "name": "n5",
-          "ip": "127.0.0.1",
-          "bindPort": 1115,
-          "master": false
-        },
-        {
-          "name": "n6",
-          "ip": "127.0.0.1",
-          "bindPort": 1116,
-          "master": false
-        }
-      ]
+      "slaves": ["n5", "n6"]
     },
     {
       "name": "n3",
